2008-09-17  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Simon.

        [QtWebKit] Implement error handling in TextCodecQt::decode
        Use the QTextCodec parsing state to set the sawError out variable. This
        is needed to pass Test 70 of acid3. The test case for this bug is
        fast/encoding/invalid-xml.html that is now partially passed. To pass
        it completely the Qt text codecs need to be adjusted to have proper
        error handling.

        * platform/text/qt/TextCodecQt.cpp:
        (WebCore::TextCodecQt::decode):

2008-09-17  Sam Weinig  <sam@webkit.org>

        Rubber-stamped by Dave Hyatt.

        Split BorderData, BorderValue, CollapsedBorderValue, OutlineValue and StyleSurroundData
        out of RenderStyle.h/cpp

        * GNUmakefile.am:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * WebCoreSources.bkl:
        * rendering/style/BorderData.h: Copied from rendering/style/RenderStyle.h.
        (WebCore::BorderData::hasBorderRadius):
        (WebCore::BorderData::borderLeftWidth):
        (WebCore::BorderData::borderRightWidth):
        (WebCore::BorderData::borderTopWidth):
        (WebCore::BorderData::borderBottomWidth):
        (WebCore::BorderData::operator!=):
        * rendering/style/BorderValue.h: Copied from rendering/style/RenderStyle.h.
        (WebCore::):
        (WebCore::BorderValue::BorderValue):
        (WebCore::BorderValue::nonZero):
        (WebCore::BorderValue::isTransparent):
        (WebCore::BorderValue::isVisible):
        * rendering/style/CollapsedBorderValue.h: Copied from rendering/style/RenderStyle.h.
        (WebCore::):
        (WebCore::CollapsedBorderValue::CollapsedBorderValue):
        (WebCore::CollapsedBorderValue::operator==):
        * rendering/style/OutlineValue.h: Copied from rendering/style/RenderStyle.h.
        (WebCore::OutlineValue::OutlineValue):