@@ -1,3 +1,12 @@
+2008-09-17  Steve Falkenburg  <sfalken@apple.com>
+
+        Fix build.
+
+        * platform/win/ScrollViewWin.cpp:
+        (WebCore::ScrollView::setParentVisible):
+        * plugins/win/PluginViewWin.cpp:
+        (WebCore::PluginView::init):
+
 2008-09-17  Holger Hans Peter Freyther  <zecke@selfish.org>
 
         Reviewed by Simon.
